--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@ body {
   align-items: center;
   justify-content: center;
   background-color: #eeeeee;
+  height: 100vh;
+  overflow: hidden;
 }
 
 .game-container {
@@ -15,6 +17,7 @@ body {
   align-items: center;
   justify-content: center;
   padding: 10px;
+  margin: 30px 0;
 }
 
 .game-container svg {
@@ -46,4 +49,58 @@ body {
 
 .draggable {
   cursor: pointer;
+}
+
+#text-anneaux {
+  text-align: center;
+}
+
+.slider {
+  -webkit-appearance: none;
+  width: 400px;
+  height: 10px;
+  background: #000;
+  opacity: 0.7;
+  outline: none;
+  border-radius: 5px;
+  -webkit-transition: .2s;
+  transition: opacity .2s;
+}
+
+.slider::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 20px;
+  height: 20px;
+  border-radius: 50%; 
+  border: 1px solid black;
+  background: aqua;
+  cursor: pointer;
+}
+
+.slider::-moz-range-thumb {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+  border: 1px solid black;
+  background: aqua;
+  cursor: pointer;
+}
+
+.slider:hover {
+  opacity: 1;
+}
+
+.slider-container {
+  margin-bottom: 20px;
+}
+
+#start {
+  background: aqua;
+  color: #000;
+  border: 1px solid black;
+  padding: 10px;
+  border-radius: 10px;
+  margin-top: 15px;
+  font-size: 16px;
 }
